--- a/fly.toml
+++ b/fly.toml
@@ -7,6 +7,8 @@ processes = []
 
 [build]
   [build.args]
+    BUNDLER_VERSION = "2.3.3"
+    NODE_VERSION = "16.17.0"
     BUILD_COMMAND = "bin/rails fly:build"
     SERVER_COMMAND = "bin/rails fly:server"
     RUBY_VERSION = "3.1.2"
